--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     <meta name="theme-color" content="#EB1652">
     <meta property="og:site_name" content="Apple | World">
     <meta property="og:type" content="article">
-    <meta property="og:image" content="images/apple.png">
+    <meta property="og:image" content="images/apple-logo.png">
     <meta property="og:description" content="⚪| APPLE WORLD.">
-    <meta name="description" content=" Tienda dedicada a productos Apple originales.">
+    <meta name="description" content=" Tienda dedicada a productos Apple originales, Baratos.">
 </head>
 
 <body data-aos-easing="ease" data-aos-duration="400" data-aos-delay="0">
@@ -300,8 +300,8 @@
                     <div class="items d-flex">
                         <div>
                             <h5 style="color:rgb(255, 255, 255);">Apple World</h5>
-                            <p>Revenda del mejor Cheat de FiveM indetectable, hecho en Argentina.
-                                Contamos con un equipo para brindar todo el soporte y realizar la venta del cheat en el país. </p>
+                            <p>Tienda de productos Apple originales , Importados de Paraguay
+                                Contamos con un equipo para brindar todo el soporte y realizar ventas en todo el pais. </p>
                         </div>
                     </div>
                 </div>
